modificacion de diseño y funcionalidad en la muestra de busquedas

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,10 @@
     padding: 10px 15px;
     width: 100%;
   }
+
+  h1 {
+    font-size: 5rem;
+  }
   
   h2 {
     font-size: 1.5rem;
@@ -25,7 +29,7 @@
   
   h3 {
     font-size: 3rem;
-    margin-bottom: 5px;
+    margin-bottom: 50px;
   }
   
   .card-grid {
